tests/workflows/tests/snapshots/stage__stage_view_json_envelope.snap
---
source: tests/workflows/tests/stage.rs
expression: envelope
---
{
  "success": true,
  "target": "npm",
  "registry": "http://mock.registry",
  "stageId": "123e4567-e89b-12d3-a456-426614174000",
  "data": {
    "id": "123e4567-e89b-12d3-a456-426614174000",
    "packageName": "@scope/staged-pkg",
    "version": "1.0.0",
    "tag": "latest",
    "createdAt": "2026-06-04T00:00:00.000Z",
    "actor": "testuser",
    "actorType": "user",
    "shasum": "abc123"
  }
}
